--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
 @layer components {
   /* Alpine.js
     ======================================================================== */
